[package]
name = "test_simdeez"
version = "0.1.0"
authors = ["Ching-Chuan Chen <zw12356@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = ""
rand = ""
rand_distr = ""
arrayref = ""
packed_simd = ""
rayon = ""
cblas = ""
blas-src = { version = "*", features = ["intel-mkl"] }

[dependencies.intel-mkl-src]
version = "^0.6.0"
default-features = false
path = "../intel-mkl-src/intel-mkl-src"
features = ["mkl-static-lp64-tbb"]

[dependencies.intel-mkl-tool]
path = "../intel-mkl-src/intel-mkl-tool"
