[package]
name = "test_simdeez"
version = "0.1.0"
authors = ["Ching-Chuan Chen <zw12356@gmail.com>"]
edition = "2018"

[dependencies]
time = "*"
rand = "*"
rand_distr = "*"
arrayref = "*"
rayon = "*"
cblas = "*"
packed_simd = { version = "0.3.8", package = "packed_simd" }
intel-mkl-src = {version = "*", default-features = false, features = ["mkl-static-lp64-iomp"]}
